--- a/admin/admin.html
+++ b/admin/admin.html
@@ -57,6 +57,7 @@
                 </div>
             </div>
         </div>
+        <div style="position:fixed;bottom:3px;right:7px;">- By <a target="_blank" href="https://github.com/sanix-darker">Sanix darker</a> - </div>
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         <script src='https://cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js'></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js'></script>
